--- a/_modules/pyart/retrieve/cappi.html
+++ b/_modules/pyart/retrieve/cappi.html
@@ -748,7 +748,7 @@
         <span class="n">sweep_end_ray_index</span><span class="o">=</span><span class="n">sweep_end_ray_index</span><span class="p">,</span>
         <span class="n">azimuth</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;data&quot;</span><span class="p">:</span> <span class="n">azimuth_final</span><span class="p">},</span>
         <span class="n">elevation</span><span class="o">=</span><span class="p">{</span><span class="s2">&quot;data&quot;</span><span class="p">:</span> <span class="n">elevation_final</span><span class="p">},</span>
-        <span class="n">instrument_parameters</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+        <span class="n">instrument_parameters</span><span class="o">=</span><span class="n">radar</span><span class="o">.</span><span class="n">instrument_parameters</span><span class="p">,</span>
     <span class="p">)</span></div>
 
 </pre></div>
